--- a/Project-Rup/Project-Rup/Project-Rup.csproj
+++ b/Project-Rup/Project-Rup/Project-Rup.csproj
@@ -53,11 +53,11 @@
       <DependentUpon>AdmWin.cs</DependentUpon>
     </Compile>
     <Compile Include="DataKeeper.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="PreviewShedule.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="PreviewShedule.Designer.cs">
+      <DependentUpon>PreviewShedule.cs</DependentUpon>
     </Compile>
     <Compile Include="Generator.cs" />
     <Compile Include="LoginWin.cs">
@@ -85,8 +85,8 @@
     <EmbeddedResource Include="AdmWin.resx">
       <DependentUpon>AdmWin.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="PreviewShedule.resx">
+      <DependentUpon>PreviewShedule.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LoginWin.resx">
       <DependentUpon>LoginWin.cs</DependentUpon>
